--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset = "utf-8">
         <title>PG Rated</title>
+        <base href="/">
         <link rel="stylesheet" href="/style.css">
         <link rel="icon" href="icon.ico">
     </head>
