--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </head>
     <body>
         <h1>PG Rated Terrain</h1>
-        <script type="module" src="/main.js"></script>
+        <script type="module" src="./main.js"></script>
     </body>
 </html>
